add built-in users delete/update restrictions

--- a/src/main/webapp/WEB-INF/messages/app.properties
+++ b/src/main/webapp/WEB-INF/messages/app.properties
@@ -68,7 +68,8 @@ error.wrongRequest=Wrong request
 
 exception.user.duplicateEmail=User with this email already exists
 exception.user.duplicateName=User with this name already exists
-exception.user.cantDeleteHimself=User cannot be deleted
+exception.user.cantDeleteUser=User cannot be deleted
+exception.user.cantUpdateUser=User cannot be updated
 exception.dish.duplicateName=Dish with this name already exists
 exception.restaurant.duplicateName=Restaurant with this name already exists
 exception.restaurant.duplicateAddress=Restaurant with this address already exists
