--- a/src/main/webapp/WEB-INF/messages/app.properties
+++ b/src/main/webapp/WEB-INF/messages/app.properties
@@ -70,7 +70,7 @@ exception.user.duplicateEmail=User with this email already exists
 exception.user.duplicateName=User with this name already exists
 exception.user.cantDeleteUser=User cannot be deleted
 exception.user.cantUpdateUser=User cannot be updated
-exception.dish.duplicateName=Dish with this name already exists
+exception.dish.duplicateNameWeight=Dish with this name and weight already exists
 exception.restaurant.duplicateName=Restaurant with this name already exists
 exception.restaurant.duplicateAddress=Restaurant with this address already exists
 exception.restaurant.duplicateEmail=Restaurant with this email already exists
