delete 'date' parameter in menu display

--- a/src/main/webapp/WEB-INF/messages/app.properties
+++ b/src/main/webapp/WEB-INF/messages/app.properties
@@ -40,7 +40,7 @@ dish.name=Name
 dish.weight=Weight (gr)
 dish.add=Add/edit dish
 
-menu.today.title=Restaurant menu for
+menu.today.title=Restaurant menu
 menu.voting.title=Restaurant menu
 menu.voting.noMenu=Menu for today has not been loaded yet
 menu.add=Add/edit dish in menu
