add link to main page in bodyHeader.jsp

--- a/src/main/webapp/WEB-INF/messages/app.properties
+++ b/src/main/webapp/WEB-INF/messages/app.properties
@@ -1,4 +1,5 @@
 app.title=Restaurant voting system
+app.main=Main page
 app.stackTitle=Application stack:
 app.description=<a href="https://github.com/SergDevJ/restvoting">Java Enterprise project</a> with registration/authorization and role-based access rights (USER, ADMIN). \
 Admin can create / edit / delete restaurants, dishes, restaurant menus, users. Users can register, vote for a restaurant, manage their profile and view the voting history in it via the UI (via AJAX) and via the REST interface with basic authorization. \
