--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.topjava</groupId>
+    <groupId>ru.ssk</groupId>
     <artifactId>restvoting</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -27,6 +27,7 @@
 
         <!--DB-->
         <postgresql.version>42.2.18</postgresql.version>
+
         <!--    Tests  -->
         <junit.jupiter.version>5.7.1</junit.jupiter.version>
         <assertj.version>3.19.0</assertj.version>
@@ -85,6 +86,13 @@
     </build>
 
     <dependencies>
+        <!-- Swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <!-- Logging with SLF4J & LogBack -->
         <dependency>
             <groupId>org.slf4j</groupId>
