--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-profiles.db=hsqldb
+#profiles.db=hsqldb
 #profiles.db=postgres
-#profiles.db=heroku
+profiles.db=heroku
 
 ##Time format: "hh:mm"
 system.voteLastTime=11:00
